--- a/_resume/index.html
+++ b/_resume/index.html
@@ -1,4 +1,5 @@
 ---
-title: "Resume"
+layout: default
+title: Annie Moshyedi's About Page
 ---
-<h1> upload resume here... </h1>
+<h1>{{page.title}}</h1>
