--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,6 @@
 ---
+layout: default
 title: Annie Moshyedi's Resume
 ---
-<h1>{{ page.title }}</h1>
+<h1>{{page.title}}</h1>
 <p>Here is my resume</p>
