Update background image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">About Me</h2>
             <hr class="light my-4">
-              <img id="personal" src="/anne-moshyedi.github.io/img/header.JPG">
+              <img id="personal" src="/anne-moshyedi.github.io/img/personal_pic.jpg">
               <p class="text-faded mb-4">My name is Annie Moshyedi. Currently, I am <span id="age"></span> I am from Potomac, Maryland, a suburb right outside of D.C. </p>
               <script type="text/javascript">
             var date = new Date(1997, 9, 30, 9, 10, 0, 0);
