--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Resume</h2>
+            <h4><a id="pdf" href="Anne%20Moshyedi%20Resume-%201.pdf" download>Download PDF</a></h4>
             <hr class="my-4">
             </div>
             <div>
