--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 class="section-heading text-white">About Me</h2>
             <hr class="light my-4">
               <img id="personal" src="/anne-moshyedi.github.io/img/personal_pic.jpg">
-              <p class="text-faded mb-4">Hello! My name is Anne Moshyedi. You can call me Annie. Currently, I am <span id="age"></span> I am from Potomac, Maryland, a suburb right outside of D.C. </p>
+              <p class="text-faded mb-4" style="color: white">Hello! My name is Anne Moshyedi. You can call me Annie. Currently, I am <span id="age"></span> I am from Potomac, Maryland, a suburb right outside of D.C. </p>
               <script type="text/javascript">
             var date = new Date(1997, 9, 30, 9, 10, 0, 0);
             function calcAge(date){
