Edit Resume Section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
@@ -224,7 +224,7 @@
     <section id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters">
-          <div class="col-lg-4 col-sm-6" >
+          <div class="col-lg-4 col-sm-6 proj" >
             <div class="popup-gallery">
                 <a class="portfolio-box" href="game.png">
                 <img class="img-fluid" href="game.png" alt="">
@@ -240,20 +240,18 @@
                   </div>
                 </a>
             </div>
-              <a class="portfolio-box sublink" href="https://github.com/anne-moshyedi/Christmas_Game#christmas_game">
-                <div style="margin-top: auto; color: black">
+              <a class=" sublink" href="https://github.com/anne-moshyedi/Christmas_Game#christmas_game">
                 <img class="img-fluid" href="https://github.com/anne-moshyedi/Christmas_Game#christmas_game" alt="">
                   <div style="opacity: .8; position: relative; color: black" class="portfolio-box-caption">
-<!--                    <div class="portfolio-box-caption-content">-->
-                      <div class="project-name text-faded sublink">
+                    <div class="portfolio-box-caption-content">
+                      <div style="font-size: 16px" class="project-name text-faded sublink">
                         see the code
                       </div>
-<!--                    </div>-->
-                      </div>
+                    </div>
                   </div>
                 </a>
           </div>
-            <div class="col-lg-4 col-sm-6" >
+            <div style="display: block" class="col-lg-4 col-sm-6 proj" >
             <div class="popup-gallery">
                 <a class="portfolio-box" href="nlp.png">
                 <img class="img-fluid" href="nlp.png" alt="">
@@ -269,21 +267,21 @@
                   </div>
                 </a>
             </div>
-              <a class="portfolio-box sublink" href="https://github.com/anne-moshyedi/Natural_Language_Processing">
+              <a class=" sublink" href="https://github.com/anne-moshyedi/Natural_Language_Processing">
                 <div style="margin-top: auto; color: black">
                 <img class="img-fluid" href="https://github.com/anne-moshyedi/Natural_Language_Processing" alt="">
                   <div style="opacity: .8; position: relative; color: black" class="portfolio-box-caption">
-<!--                    <div class="portfolio-box-caption-content">-->
-                      <div class="project-name text-faded sublink">
+                    <div class="portfolio-box-caption-content">
+                      <div style="font-size: 16px" class="project-name text-faded sublink">
                         see the code
                       </div>
-<!--                    </div>-->
+                    </div>
                       </div>
                   </div>
                 </a>
           </div>
             
-            <div class="col-lg-4 col-sm-6" >
+            <div style="display: block" class="col-lg-4 col-sm-6 proj" >
             <div class="popup-gallery">
                 <a class="portfolio-box" href="shootings.png">
                 <img class="img-fluid" href="shootings.png" alt="">
@@ -299,15 +297,15 @@
                   </div>
                 </a>
             </div>
-              <a class="portfolio-box sublink" href="https://github.com/anne-moshyedi/Data_Visualization">
+              <a class="sublink" href="https://github.com/anne-moshyedi/Data_Visualization">
                 <div style="margin-top: auto; color: black">
                 <img class="img-fluid" href="https://github.com/anne-moshyedi/Data_Visualization" alt="">
                   <div style="opacity: .8; position: relative; color: black" class="portfolio-box-caption">
-<!--                    <div class="portfolio-box-caption-content">-->
-                      <div class="project-name text-faded sublink">
+                    <div class="portfolio-box-caption-content">
+                      <div style="font-size: 16px" class="project-name text-faded sublink">
                         see the code
                       </div>
-<!--                    </div>-->
+                    </div>
                       </div>
                   </div>
                 </a>
@@ -364,7 +362,6 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Swift</h3>
               <div class="subheading mb-3">Data Science Intern in the Innovation Lab</div>
-              <p>
                   <ul>
                       <li>
                           Worked with ML in an agile environment to create 4 Python solutions to address natural language processing issues.
