--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             }
             document.getElementById("age").innerHTML = calcAge(date);
             </script>
-            <p class="text-faded mb-4" style="color: white">I am a rising third year student at the University of Virginia majoring in Commerce through the McIntire School of Commerce and Computer Science through the College of Arts and Sciences. </p>
+            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce through the McIntire School of Commerce and Computer Science through the College of Arts and Sciences. </p>
               <!--            
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>-->
           </div>
