--- a/index.html
+++ b/index.html
@@ -360,21 +360,31 @@
         <div class="my-auto">
           <h2 style="font-weight: bold" class="mb-5">Work Experience</h2>
           <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Swift</h3>
-              <div class="subheading mb-3">Data Science Intern in the Innovation Lab</div>
+              <h3 class="mb-0">Capital One</h3>
+              <div class="subheading mb-3">Data Engineering Intern</div>
                   <ul>
                       <li>
-                          Worked with ML in an agile environment to create 4 Python solutions to address natural language processing issues.
+                          Worked for the G Suite Solutions and Engagement team to assist with Capital One’s seamless transition to G Suite
                       </li>
                       <li>
-                          Built a UI platform to display model performance metrics and enable users to upload data to train and test models.
+                          Built custom Apps Script solutions for business use cases to provide a simple experience with G Suite products
+                      </li>
+                </ul>      
+            </div>
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Swift</h3>
+              <div class="subheading mb-3">Data Science Intern (Summer), Remote Contractor (Aug. 2018 - May 2019)</div>
+                  <ul>
+                      <li>
+                          Developed a workflow consisting of 4 scalable Python solutions to perform entity resolution on various datasets
                       </li>
                       <li>
-                          Presented the finished product as a machine learning solution to company executives and stakeholders.
+                          Built a UI platform to display ML model performance metrics and allow users to upload data to test models
                       </li>
                       <li>
-                          Will continue to conduct research on artificial intelligence, specifically deep learning, for SWIFT throughout the school year.
+                          Presented a finished NLP ML product to company executives and recommended steps for future work
                       </li>
                 </ul>      
             </div>
