--- a/creative/index.html
+++ b/creative/index.html
@@ -170,7 +170,7 @@
           <h2 style="font-weight: bold" class="mb-5">Work Experience</h2>
            <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Swift</h3>
+              <h3 class="mb-0">Capital One</h3>
               <div class="subheading mb-3">Data Engineering Intern</div>
                   <ul>
                       <li>
