--- a/creative/index.html
+++ b/creative/index.html
@@ -205,46 +205,21 @@
               <span class="text-primary">June 2018 - May 2019</span>
             </div>
           </div>
-            
-            <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Vaco</h3>
-              <div class="subheading mb-3">Google Cloud Platform Innovator</div>
-                <ul>
-                    <li>
-                        Help introduce UVA students to new products and features of GCP. 
-                    </li>
-                    <li>
-                        Act as UVA's go to source for Cloud Platform knowledge. 
-                    </li>
-                    <li>
-                        Spread the word about competitions, training opportunities, and other events.
-                    </li>
-                </ul>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2018 - Present</span>
-            </div>
-          </div>
-
           <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Pool Personnel, Inc.</h3>
-              <div class="subheading mb-3">Lifeguard</div>
+              <h3 class="mb-0">Vaco</h3>
+              <div class="subheading mb-3">Google cloud Platform Innovator</div>
                 <ul>
                     <li>
-                        Ensured the smooth operation of the pool by assisting with pool maintenance and other guest services.
+                        Served as UVA’s expert in GCP to introduce cloud products to the community and plan related events
                     </li>
                     <li>
-                        Completed CPR and First Aid training to support the safety of the patrons. 
-                    </li>
-                    <li>
-                        Coordinated events for the pool members and fundraising efforts for the pool.
+                        Attended an intensive training session lead by GCP team members at Google’s HQ to gain experience with GCP                    
                     </li>
                 </ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Summers of 2014 - 2017</span>
+              <span class="text-primary">Aug. 2018 - May 2019</span>
             </div>
           </div>
 
@@ -254,13 +229,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Virginia, McIntire School of Commerce</h3>
               <div class="subheading mb-3">Charlottesville, VA</div>
-                <div>Majors: Commerce in the McIntire School of Commerce; </div>
-                  <div>       Computer Science in the College of Arts and Sciences</div>
+                <div>Majors: Commerce (Concentration: IT); Computer Science </div>
 <!--                <div>Computer Science Major from the College of Arts and Sciences</div>-->
-              <p>Cumulative GPA: 3.83</p>
+              <div>       GPA: 3.82</div>
+            <div>       Graduated With Distinction</div>
+
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2016 - May 2020</span>
+              <span class="text-primary">Aug. 2016 - May 2020</span>
             </div>
           </div>
 
@@ -271,7 +247,7 @@
               <p>GPA: 3.97 (4.64 Weighted)</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2012 - May 2016</span>
+              <span class="text-primary">Aug. 2012 - May 2016</span>
             </div>
           </div>
             
