--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             }
             document.getElementById("age").innerHTML = calcAge(date);
             </script>
-            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce through the McIntire School of Commerce and Computer Science through the College of Arts and Sciences. </p>
+            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce Computer Science. I am now looking forward to starting as a Software Engineer for Capital One in August!</p>
               <!--            
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>-->
           </div>
