--- a/index.html
+++ b/index.html
@@ -227,6 +227,33 @@
         <div class="row no-gutters">
           <div class="col-lg-4 col-sm-6 proj" >
             <div class="popup-gallery">
+                <a class="portfolio-box" href="demo.png">
+                <img class="img-fluid" href="demo.png" alt="">
+                  <div style="opacity: 1" class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content link">
+                      <div style="font-weight: regular" class="project-category link">
+                        Mobile Application
+                      </div>
+                      <div class="project-name link">
+                        Virtual Business Cards
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
+              <a class=" sublink" href="https://github.com/anne-moshyedi/virtual_cards">
+                <img class="img-fluid" href="https://github.com/anne-moshyedi/virtual_cards" alt="">
+                  <div style="opacity: .8; position: relative; color: black" class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div style="font-size: 16px" class="project-name text-faded sublink">
+                        see the code
+                      </div>
+                    </div>
+                  </div>
+                </a>
+          </div>
+          <div class="col-lg-4 col-sm-6 proj" >
+            <div class="popup-gallery">
                 <a class="portfolio-box" href="game.png">
                 <img class="img-fluid" href="game.png" alt="">
                   <div style="opacity: 1" class="portfolio-box-caption">
@@ -355,7 +382,7 @@
             <h1 style="font-weight: bold"class="mb-0">Anne
             <span class="text-primary">Moshyedi</span>
             </h1>
-                <div class="subheading mb-5" style="position: relative">1 Sprinklewood Court · Potomac, MD 20854 · (301) 529-6024 ·
+                <div class="subheading mb-5" style="position: relative">(301) 529-6024 ·
                     <a href="mailto:annemoshyedi@gmail.com">annemoshyedi@gmail.com</a>
                 </div>
             </div>
