--- a/index.html
+++ b/index.html
@@ -414,6 +414,23 @@
             </div>
           </div>
           <h2 style="font-weight: bold" class="mb-5">Work Experience</h2>
+            <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Capital One</h3>
+              <div class="subheading mb-3">Software Engineer</div>
+                  <ul>
+                      <li>
+                          Develop solutions for managing Capital One Credit Card data that contributes to vital business decisions
+                      </li>
+                      <li>
+                          Maintain a big data platform built on Spark, AWS, and Kubernetes
+                      </li>
+                </ul>      
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Aug. 2020 - Present</span>
+            </div>
+          </div>
            <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Capital One</h3>
@@ -454,7 +471,7 @@
           <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Vaco</h3>
-              <div class="subheading mb-3">Google cloud Platform Innovator</div>
+              <div class="subheading mb-3">Google Cloud Platform Innovator</div>
                 <ul>
                     <li>
                         Served as UVA’s expert in GCP to introduce cloud products to the community and plan related events
