--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 class="section-heading text-white">About Me</h2>
             <hr class="light my-4">
               <img id="personal" src="/anne-moshyedi.github.io/img/personal_pic.jpg">
-              <p class="text-faded mb-4" style="color: white">Hello! My name is Anne Moshyedi. You can call me Annie. Currently, I am <span id="age"></span> I am from Potomac, Maryland, a suburb right outside of D.C. </p>
+              <p class="text-faded mb-4" style="color: white">Hello! My name is Anne Moshyedi, but you can call me Annie. Currently, I am <span id="age"></span> I am from Potomac, Maryland, a suburb right outside of D.C. </p>
               <script type="text/javascript">
             var date = new Date(1997, 9, 30, 10, 10, 0, 0);
             function calcAge(date){
@@ -148,7 +148,7 @@
             }
             document.getElementById("age").innerHTML = calcAge(date);
             </script>
-            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce Computer Science. I am now looking forward to starting as a Software Engineer for Capital One in August!</p>
+            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce and Computer Science. I've really been enjoying my software engineering job with Capital One, and I can't wait to get into the office to meet my team in person!</p>
               <!--            
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>-->
           </div>
