--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             }
             document.getElementById("age").innerHTML = calcAge(date);
             </script>
-            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce and Computer Science. I've really been enjoying my software engineering job with Capital One, and I can't wait to get into the office to meet my team in person!</p>
+            <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce and Computer Science. I've really been enjoying my software engineering job with Capital One, and I can't wait to get into the office to meet my team in person! In the past 10 months, I've picked up pickleball, Peloton, and yoga. Oh! I also started a new job in August. I've been loving my software engineering role at Capital One, and I can't wait to get into the office to meet my team in person!</p>
               <!--            
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>-->
           </div>
