update bio to include foodie tidbit

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             document.getElementById("age").innerHTML = calcAge(date);
             </script>
             <p class="text-faded mb-4" style="color: white">I graduated from the University of Virginia in May 2020 with a double major in Commerce and Computer Science. In the past 10 months, I've picked up pickleball, Peloton, and yoga. Oh! I also started a new job in August. I've been loving my software engineering role at Capital One, and I can't wait to get into the office to meet my team in person!</p>
+            <p class="text-faded mb-4" style="color: white">There's one more thing I want to mention here before you go, and that is food. I have self-proclaimed myself as one of the biggest foodies in the DMV and am always on the hunt for new places to try. I've found such great take out spots recently :) reach out if you every want to talk about anything food related!</p>
               <!--            
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>-->
           </div>
