--- a/index.html
+++ b/index.html
@@ -419,7 +419,17 @@
             <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Capital One</h3>
-              <div class="subheading mb-3">Software Engineer</div>
+                <div class="subheading mb-3">Senior Associate Software Engineer (july 2021)</div>
+                      <ul>
+                          <li>
+                              Perform fullstack development for a small business banking application that assists with the digital account opening experience
+                          </li>
+                          <li>
+                              Contribute to the front-end and back-end development of a case management tool
+                          </li>
+                    </ul>      
+                </div>
+              <div class="subheading mb-3">Associate Software Engineer</div>
                   <ul>
                       <li>
                           Develop solutions for managing Capital One Credit Card data that contributes to vital business decisions
