Add new title formatting for Capital One

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div style="padding-left: 20px; padding-right: 20px" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Capital One</h3>
-                <div class="subheading mb-3">Senior Associate Software Engineer (july 2021)</div>
+                <div class="subheading mb-3">Senior Associate Software Engineer (July 2021 - Present)</div>
                       <ul>
                           <li>
                               Perform fullstack development for a small business banking application that assists with the digital account opening experience
@@ -427,9 +427,8 @@
                           <li>
                               Contribute to the front-end and back-end development of a case management tool
                           </li>
-                    </ul>      
-                </div>
-              <div class="subheading mb-3">Associate Software Engineer</div>
+                    </ul>
+                <div class="subheading mb-3">Associate Software Engineer (Aug. 2020 - July 2021)</div>
                   <ul>
                       <li>
                           Develop solutions for managing Capital One Credit Card data that contributes to vital business decisions
@@ -437,8 +436,9 @@
                       <li>
                           Maintain a big data platform built on Spark, AWS, and Kubernetes
                       </li>
-                </ul>      
-            </div>
+                    </ul>
+                </div>
+              
             <div class="resume-date text-md-right">
               <span class="text-primary">Aug. 2020 - Present</span>
             </div>
